examples/kiali_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kiali.k8s-istio.sikademo.com
      secretName: kiali.k8s-istio.sikademo.com-tls
  rules:
    - host: kiali.k8s-istio.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
